[build-system]
requires = ["hatchling>=1.26"]
build-backend = "hatchling.build"

[project]
name = "productlane-cli"
version = "0.1.0"
description = "A small command-line client for the Productlane REST API."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "Long Hoang" }]
keywords = ["productlane", "cli", "support", "feedback", "linear"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Utilities",
]
dependencies = [
  "httpx>=0.27",
  "typer>=0.12",
  "rich>=13.7",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "respx>=0.21",
  "ruff>=0.8",
]

[project.urls]
Homepage = "https://github.com/loong/productlane-cli"
Repository = "https://github.com/loong/productlane-cli"
Issues = "https://github.com/loong/productlane-cli/issues"

[project.scripts]
productlane = "productlane_cli.main:app"
pl = "productlane_cli.main:app"

[tool.hatch.build.targets.wheel]
packages = ["src/productlane_cli"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
